Updated style stuff for single post

--- a/templates/post.html
+++ b/templates/post.html
@@ -9,7 +9,7 @@
 				{% endif %}
 				<div class="card-content">
 					<p>{{ post['content'] }}</p>
-					<p class="date-published">{{ post['datePublished'] }}</p>
+					<p class="date-posted">{{ post['datePublished'] }}</p>
 				</div>
 			</div>
 		</div>
